--- a/cfgdayz/HiveExt.ini
+++ b/cfgdayz/HiveExt.ini
@@ -12,9 +12,9 @@
 [Time]
 ;Possible values: Local, Custom, Static
 ;You cannot use Static on OFFICIAL Hive, it will just revert to Local
-;Type = Custom
+;Type = Local
 ;If using Custom type, offset from UTC in hours (can be negative as well)
-;Offset = 
+;Offset = 0
 ;These 2 settings only apply if using Static type (Custom date/time on every server start)
 ;The value (0-24) to set the Hour to, if commented or empty then the hour won't be changed
 ;Hour = 8
@@ -25,14 +25,14 @@
 ;Possible values: trace, debug, information, notice, warning, error, critical, fatal, none
 ;They are sorted by importance (low to high), with trace being the most verbose, and none would turn off logging
 ;This controls both the file output level, and the console output level
-Level = information
+;Level = information
 
 ;Uncomment this option to override the logging level for the console only
 ;The specified level can only be higher than the global one, setting lower values will have no effect
 ;So for example, if you want to have information-level logs in your file, but only warning-level and higher in your console
 ;You would uncomment this option and set it to warning
 ;Leaving it commented out means there's no special level for the console, so it will just use the global one
-ConsoleLevel = warning
+;ConsoleLevel = information
 
 ;By default, the HiveExt console log output will go to the Arma2 server window, with colour highlighing by importance
 ;If you want to use the old style, separate windows console window for the HiveExt log output, set this option to true
@@ -54,12 +54,12 @@ Type = MySql
 Port = 3306
 
 ;Database name to connect to (you must supply this if private).
-Database = dayz
+Database = hivemind
 
 ;Username to connect with
-Username = hivemind
+Username = dayz
 ;Password to authenticate with (default is blank)
-Password = hivemind-dayz
+Password = dayz
 
 ;If using OFFICIAL hive, the settings in this section have no effect, appropriate layout will be used
 [Characters]
