--- a/cfgdayz/server.cfg
+++ b/cfgdayz/server.cfg
@@ -1,5 +1,5 @@
 // GLOBAL SETTINGS
-hostname = "SERVER NAME(1.8.7/Beta 131129)hosted by []";	// The name of the server that shall be displayed in the public server list
+hostname = "DayZ - PRIVATE SERVER [COUNTRYCODE] (1.8.7/Beta 131129) - hosted by [NAME]";	// The name of the server that shall be displayed in the public server list
 password = "";													// Password for joining, eg connecting to the server
 passwordAdmin = "changeme";										// Password to become server admin. When you're in Arma MP and connected to the server, type '#login xyz'
 logFile = "server_console.log";									// Tells ArmA-server where the logfile should go and what it should be called
@@ -13,11 +13,10 @@ steamqueryport = 27016;	//default 27016, needs to be unique if multiple servers 
 // It can be several lines, separated by comma
 // Empty messages "" will not be displayed at all but are only for increasing the interval
 motd[] = {
-    "Server by Skiper",
-    "",
-    "",
+	"My DayZ Private Server!",
+	"Private Server by Skiper"
 };
-motdInterval = 10;						// Time interval (in seconds) between each message
+motdInterval = 1;						// Time interval (in seconds) between each message
 
 // JOINING RULES
 maxPlayers = 10;						// Maximum amount of players. Civilians and watchers, beholder, bystanders and so on also count as player.
