--- a/cfgdayz/basic.cfg
+++ b/cfgdayz/basic.cfg
@@ -3,13 +3,14 @@ MaxBandwidth=1073741824;
 MaxMsgSend=256;
 MaxSizeGuaranteed=128;
 MaxSizeNonguaranteed=256;
-MinErrorToSendNear=0.029999999;
+MinErrorToSendNear=0.03;
 MinErrorToSend=0.003;
-MaxCustomFileSize=140000000;
+MaxCustomFileSize=0;
 Windowed=0;
 adapter=-1;
 3D_Performance=1;
 Resolution_Bpp=32;
+
 class sockets
 {
 	maxPacketSize=1400;
