--- a/cfgdayz/HiveExt.ini
+++ b/cfgdayz/HiveExt.ini
@@ -36,7 +36,7 @@
 
 ;By default, the HiveExt console log output will go to the Arma2 server window, with colour highlighing by importance
 ;If you want to use the old style, separate windows console window for the HiveExt log output, set this option to true
-SeparateConsole = true
+;SeparateConsole = false
 
 [Database]
 ;Hostname or IP of the server to connect to
@@ -44,22 +44,22 @@ SeparateConsole = true
 ;If you leave this line commented or blank, HiveExt will connect to the OFFICIAL Hive, which requires registration
 ;See support.dayzmod.com for more information on what OFFICIAL Hive means, what are the rules, etc.
 ;If using OFFICIAL hive, the rest of the settings in this section have no effect
-Host = 127.0.0.1
+;Host = localhost
 
 ;The default is MySql, which is better supported than Postgre (completely untested)
-Type = MySql
+;Type = MySql
 
 ;Port to connect to. The default is the default listening port of a server of the selected Type
 ;Instead of specifying Port, you can specify Socket and set Value to the socket name
-Port = 3306
+;Port = 3306
 
 ;Database name to connect to (you must supply this if private).
-Database = hivemind
+;Database = 
 
 ;Username to connect with
-Username = dayz
+;Username = root
 ;Password to authenticate with (default is blank)
-Password = dayz
+;Password = 
 
 ;If using OFFICIAL hive, the settings in this section have no effect, appropriate layout will be used
 [Characters]
